--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,17 @@
   <groupId>pl.edu.agh.kis</groupId>
   <artifactId>qrc</artifactId>
   <version>0.1</version>
-  <name>Archetype - qrc</name>
-  <url>http://maven.apache.org</url>
+  <name>Quasi-Regex-Compiler</name>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
+
+    <antlr.version>4.7.1</antlr.version>
+    <mojo.version>3.0.0</mojo.version>
   </properties>
+
   <dependencies>
     <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
     <dependency>
@@ -30,6 +33,16 @@
   </dependencies>
 
   <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.8.1</version>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+
     <plugins>
       <plugin>
         <groupId>org.antlr</groupId>
@@ -41,6 +54,24 @@
             <goals>
               <goal>antlr4</goal>
             </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+        <version>${mojo.version}</version>
+        <executions>
+          <execution>
+            <phase>generate-sources</phase>
+            <goals>
+              <goal>add-source</goal>
+            </goals>
+            <configuration>
+              <sources>
+                <source>${basedir}/target/generated-sources/antlr4</source>
+              </sources>
+            </configuration>
           </execution>
         </executions>
       </plugin>
