--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,9 @@
         <groupId>org.antlr</groupId>
         <artifactId>antlr4-maven-plugin</artifactId>
         <version>4.12.0</version>
+        <configuration>
+          <visitor>true</visitor>
+        </configuration>
         <executions>
           <execution>
             <id>antlr</id>
