- generators for Java and Python code (Java still needs paralellisation support) - small grammar change, now it's more succinct - compiler transforming pattern string into code

--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
         <version>4.12.0</version>
         <configuration>
           <visitor>true</visitor>
-<!--          <listener>false</listener>-->
+          <listener>false</listener>
         </configuration>
         <executions>
           <execution>
